--- a/src/main/java/Ventanas/Historico.form
+++ b/src/main/java/Ventanas/Historico.form
@@ -97,7 +97,7 @@
         <Component class="javax.swing.JTable" name="tblHistorico">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="new javax.swing.table.DefaultTableModel(&#xa;    new Object [][] {},&#xa;    new String [] {&#xa;        &quot;ID&quot;,&#xa;        &quot;PLACA&quot;,&#xa;        &quot;CARNET&quot;,&#xa;        &quot;TIPO USUARIO&quot;,&#xa;        &quot;TIPO VEH&#xcd;CULO&quot;,&#xa;        &quot;SPOT&quot;,&#xa;        &quot;AREA&quot;,&#xa;        &quot;INGRESO&quot;,&#xa;        &quot;SALIDA&quot;,&#xa;        &quot;TARIFA&quot;,&#xa;        &quot;MONTO&quot;,&#xa;        &quot;M&#xc9;TODO&quot;&#xa;    }&#xa;)" type="code"/>
+              <Connection code="new javax.swing.table.DefaultTableModel(&#xa;    new Object [][] {},&#xa;    new String [] {&#xa;        &quot;PLACA&quot;,&#xa;        &quot;CARNET&quot;,&#xa;        &quot;TIPO USUARIO&quot;,&#xa;        &quot;TIPO VEH&#xcd;CULO&quot;,&#xa;        &quot;SPOT&quot;,&#xa;        &quot;AREA&quot;,&#xa;        &quot;INGRESO&quot;,&#xa;        &quot;SALIDA&quot;,&#xa;        &quot;TARIFA&quot;,&#xa;        &quot;MONTO&quot;,&#xa;        &quot;M&#xc9;TODO&quot;&#xa;    }&#xa;)" type="code"/>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="0"/>
